Continued SED inclusion
Former-commit-id: 74442e76d1c54b2e3aa498b24e1d46d17453ae1f

--- a/vasca/examples/inspect_gPhoton.ipynb
+++ b/vasca/examples/inspect_gPhoton.ipynb
@@ -17,10 +17,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "region_name = \"TDS\" # \"WD\" #\"MDIS_10-800\" # _ELAISN1\n",
-    "srcs_ids = [1891 ,3403 ,16149 ,45461 ,] \n",
+    "region_name = \"CAINGSGII_10-800\" #\"TDS\" # \"WD\" #\"MDIS_10-800\" # _ELAISN1\n",
     "outdir = \"./resources/gPhoton_out/\"\n",
-    "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\""
+    "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
+    "\n",
+    "srcs_ids = [1891 ,3403 ,16149 ,45461 ,]\n",
+    "srcs_ids = [4546 ,12718 ,69253 ,228174 ,229551 ,] # WD \"CAINGSGII_10-800\" "
    ]
   },
   {
@@ -32,27 +34,29 @@
     {
      "data": {
       "text/html": [
-       "<div><i>Table length=4</i>\n",
-       "<table id=\"table140454472581472\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<div><i>Table length=5</i>\n",
+       "<table id=\"table140693525610400\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_xv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>coadd_src_id</th><th>coadd_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>coadd_ffactor</th><th>coadd_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>hr</th><th>hr_err</th><th>otype</th><th>main_id</th><th>otypes</th><th>z_value</th><th>distance_distance</th><th>distance_unit</th><th>distance_result</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec2</th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>int64</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>float64</th><th>float64</th><th>bytes4</th><th>float32</th></tr></thead>\n",
-       "<tr><td>-1</td><td>35 .. 5</td><td>334.61900740472345</td><td>-0.0033813554025151345</td><td>0.08654309</td><td>-0.13358614</td><td>0.16820572</td><td>0.97304916</td><td>0.5630017</td><td>2410</td><td>0.18017368</td><td>1 .. 2</td><td>True</td><td>121.59981 .. 40.61505</td><td>0.32700354 .. 0.6793138</td><td>0.0012762442 .. 0.0012225002</td><td>22.828146 .. 9.024125</td><td>2.1874502e-27 .. 0.001186736</td><td>6.2001452 .. 4.5217357</td><td>1.0003184 .. 1.007664</td><td>0.08853569 .. 0.31262133</td><td>-1</td><td>1891</td><td>2</td><td>0.33295098</td><td>0.0059931264</td><td>WD*</td><td>PB  5130</td><td>WD*|WD*|WD*|WD*|*|Opt|UV|WD?|WD?</td><td>1.3299500</td><td>121.7450</td><td>pc</td><td>0.3261</td></tr>\n",
-       "<tr><td>-1</td><td>35 .. 4</td><td>333.5413675869932</td><td>0.8794347888579439</td><td>0.10153956</td><td>-0.2568612</td><td>0.15229508</td><td>0.99949604</td><td>0.37336546</td><td>6503</td><td>0.08153211</td><td>1 .. 2</td><td>True</td><td>20.24083 .. 5.189896</td><td>0.16559538 .. 0.40037686</td><td>0.06014167 .. -0.020882767</td><td>25.663895 .. 0.08260181</td><td>0.0 .. 0.9400651</td><td>26.422163 .. 0.13361952</td><td>0.9598218 .. 1.0394988</td><td>-3.864632 .. 0.3762283</td><td>-1</td><td>3403</td><td>2</td><td>0.34424755</td><td>0.02826839</td><td>WD*</td><td>GALEX J221409.8+005245</td><td>WD*|WD*|WD*|*|Opt|UV</td><td>--</td><td>439.0000</td><td>pc</td><td>0.2825</td></tr>\n",
-       "<tr><td>-1</td><td>28 .. 9</td><td>150.65361426058803</td><td>2.643111670533707</td><td>0.08557914</td><td>-0.08412055</td><td>0.19236396</td><td>0.8580123</td><td>0.66507405</td><td>44620</td><td>0.12717035</td><td>1 .. 2</td><td>True</td><td>106.96241 .. 66.50696</td><td>0.34322292 .. 0.6652977</td><td>0.0007799396 .. 0.0010192677</td><td>12.584814 .. 8.828741</td><td>5.945311e-11 .. 0.026203794</td><td>3.846406 .. 2.1749918</td><td>1.0030466 .. 1.0014558</td><td>0.71483445 .. 0.09157375</td><td>-1</td><td>16149</td><td>2</td><td>0.6084019</td><td>0.006708973</td><td>WD?</td><td>GALEX J100236.8+023834</td><td>*|*|G|Opt|UV|WD?|WD?</td><td>1.9900000</td><td>293.2980</td><td>pc</td><td>0.4992</td></tr>\n",
-       "<tr><td>-1</td><td>12 .. -1</td><td>244.14364033210146</td><td>54.16991388586225</td><td>0.16000032</td><td>-0.1349428</td><td>0.17470829</td><td>0.4975613</td><td>0.578193</td><td>12469</td><td>0.3236669</td><td>1 .. 0</td><td>True</td><td>46.202312 .. -1.0</td><td>0.4356251 .. -1.0</td><td>0.019377798 .. -100.0</td><td>43.763363 .. -1.0</td><td>7.33e-43 .. -1.0</td><td>20.80549 .. -1.0</td><td>1.0119411 .. -100.0</td><td>1.0512818 .. -10000.0</td><td>-1</td><td>45461</td><td>1</td><td>-1.0</td><td>-1.0</td><td>WD?</td><td>GALEX J161634.4+541011</td><td>*|*|Opt|UV|WD?|WD?</td><td>--</td><td>93.6920</td><td>pc</td><td>0.9987</td></tr>\n",
+       "<tr><td>-1</td><td>14 .. 4</td><td>348.9035760296506</td><td>19.413752921024184</td><td>0.12961677</td><td>-0.16667423</td><td>0.1757124</td><td>0.9601939</td><td>0.38698718</td><td>10620</td><td>0.27343646</td><td>1 .. 2</td><td>True</td><td>127.17282 .. 38.594795</td><td>0.6384927 .. 1.9439608</td><td>0.001805932 .. 0.0030419864</td><td>36.337494 .. 59.990253</td><td>1.3913088e-13 .. 0.45650917</td><td>6.923858 .. 0.86853236</td><td>1.0022669 .. 1.0705501</td><td>0.35844114 .. 1.2124159</td><td>-1</td><td>4546</td><td>2</td><td>0.31256443</td><td>0.016097367</td><td>WD?</td><td>SDSS J231536.88+192448.9</td><td>blu|Pu*|*|Opt|WD?|WD?</td><td>--</td><td>168.9270</td><td>pc</td><td>0.4557</td></tr>\n",
+       "<tr><td>-1</td><td>18 .. 6</td><td>303.01100514369136</td><td>-48.39410878608832</td><td>0.11078485</td><td>-0.1118269</td><td>0.21495172</td><td>0.59480566</td><td>0.64826185</td><td>34860</td><td>0.16462971</td><td>1 .. 2</td><td>True</td><td>145.71658 .. 53.2544</td><td>0.650513 .. 1.6317714</td><td>0.011681381 .. 0.09355947</td><td>262.29507 .. 336.1793</td><td>0.0 .. 4.538933e-19</td><td>41.076607 .. 19.113188</td><td>0.9875045 .. 0.926408</td><td>-2.2628376 .. -1.7328564</td><td>-1</td><td>12718</td><td>2</td><td>0.38933843</td><td>0.012308751</td><td>WD?</td><td>Gaia DR3 6669015352243852800</td><td>*|WD?</td><td>--</td><td>--</td><td>--</td><td>0.3998</td></tr>\n",
+       "<tr><td>-1</td><td>14 .. -1</td><td>357.1212025536532</td><td>-9.416754993209635</td><td>0.16907042</td><td>-0.2680231</td><td>0.1342233</td><td>0.9720384</td><td>0.33244652</td><td>233862</td><td>0.027343804</td><td>1 .. 0</td><td>True</td><td>16.348427 .. -1.0</td><td>0.22906503 .. -1.0</td><td>0.01764733 .. -100.0</td><td>5.4612293 .. -1.0</td><td>1.6703516e-17 .. -1.0</td><td>8.480622 .. -1.0</td><td>0.9799343 .. 1.0</td><td>-1.0902563 .. 0.0</td><td>-1</td><td>69253</td><td>1</td><td>-1.0</td><td>-1.0</td><td>WD*</td><td>GALEX J234829.1-092500</td><td>WD*|**|WD*|WD*|EB*|WD*|*|Opt|UV</td><td>-0.0000600</td><td>507.2900</td><td>pc</td><td>0.6189</td></tr>\n",
+       "<tr><td>-1</td><td>15 .. -1</td><td>210.0014163678415</td><td>3.214435606873498</td><td>0.13007838</td><td>0.042491015</td><td>0.29654562</td><td>0.042537145</td><td>1.1792775</td><td>669224</td><td>0.29846194</td><td>1 .. 0</td><td>True</td><td>146.37999 .. -1.0</td><td>0.755886 .. -1.0</td><td>0.0032252688 .. -100.0</td><td>84.25255 .. -1.0</td><td>1.9072077e-12 .. -1.0</td><td>6.1626086 .. -1.0</td><td>0.9977022 .. 1.0</td><td>-0.35384166 .. 0.0</td><td>-1</td><td>228174</td><td>1</td><td>-1.0</td><td>-1.0</td><td>WD*</td><td>GALEX J140000.3+031251</td><td>WD*|WD*|WD*|WD*|WD*|WD*|*|Opt|UV</td><td>0.0000630</td><td>313.7650</td><td>pc</td><td>0.1945</td></tr>\n",
+       "<tr><td>-1</td><td>15 .. -1</td><td>207.03531485024092</td><td>-30.479189687581158</td><td>0.13244738</td><td>-0.1224625</td><td>0.14153127</td><td>0.81857866</td><td>0.54091847</td><td>673280</td><td>0.088201396</td><td>1 .. 0</td><td>True</td><td>144.80978 .. -1.0</td><td>0.74000114 .. -1.0</td><td>0.0036297438 .. -100.0</td><td>87.94179 .. -1.0</td><td>1.1032699e-20 .. -1.0</td><td>9.209586 .. -1.0</td><td>0.99899095 .. 1.0</td><td>-0.1557424 .. 0.0</td><td>-1</td><td>229551</td><td>1</td><td>-1.0</td><td>-1.0</td><td>WD?</td><td>Gaia DR3 6175066552397551616</td><td>*|WD?</td><td>--</td><td>--</td><td>--</td><td>0.1621</td></tr>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "<Table length=4>\n",
+       "<Table length=5>\n",
        "fd_src_id  nr_det          ra         ... distance_unit distance_result\n",
        "                          deg         ...                    arcsec    \n",
        "  int32   int32[2]      float64       ...     bytes4        float32    \n",
        "--------- -------- ------------------ ... ------------- ---------------\n",
-       "       -1  35 .. 5 334.61900740472345 ...            pc          0.3261\n",
-       "       -1  35 .. 4  333.5413675869932 ...            pc          0.2825\n",
-       "       -1  28 .. 9 150.65361426058803 ...            pc          0.4992\n",
-       "       -1 12 .. -1 244.14364033210146 ...            pc          0.9987"
+       "       -1  14 .. 4  348.9035760296506 ...            pc          0.4557\n",
+       "       -1  18 .. 6 303.01100514369136 ...            --          0.3998\n",
+       "       -1 14 .. -1  357.1212025536532 ...            pc          0.6189\n",
+       "       -1 15 .. -1  210.0014163678415 ...            pc          0.1945\n",
+       "       -1 15 .. -1 207.03531485024092 ...            --          0.1621"
       ]
      },
      "metadata": {},
@@ -72,6 +76,7 @@
     "from vasca.utils import mag2flux, flux2mag, tgalex_to_astrotime\n",
     "import vasca.visualization as vvis\n",
     "from vasca.region import Region\n",
+    "from vasca.resource_manager import ResourceManager\n",
     "\n",
     "rg = Region()\n",
     "rg.load_from_fits(region_fname)\n",
@@ -83,6 +88,9 @@
     "    tt_srcs = Table(rg.tt_sources[idx_srcs])\n",
     "else:\n",
     "    tt_srcs = rg.tt_sources\n",
+    "\n",
+    "rm = ResourceManager()\n",
+    "gphot_dir = rm.get_path(\"gal_gphoton\", \"sas_cloud\")\n",
     "\n",
     "display(tt_srcs)"
    ]
@@ -104,12 +112,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fae6823a2c174ebf9d0721b604db8a10",
+       "model_id": "0bbec9581eaf4cf0a4a776eb12dfc982",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(1891, 3403, 16149, 45461), value=1891), Outpu…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(4546, 12718, 69253, 228174, 229551), value=45…"
       ]
      },
      "execution_count": 3,
@@ -141,7 +149,7 @@
     "    #Get table entries for that source\n",
     "    tt_src = tt_srcs[tt_srcs[\"rg_src_id\"]==rg_src_id]\n",
     "\n",
-    "    fname = outdir+\"gPhoton_ra\"+str(round(tt_src[\"ra\"][0],5))+\"_dec\"+str(round(tt_src[\"dec\"][0],5))+\"_nuv_app.npy\"\n",
+    "    fname = gphot_dir+\"/gPhoton_ra\"+str(round(tt_src[\"ra\"][0],5))+\"_dec\"+str(round(tt_src[\"dec\"][0],5))+\"_nuv_app.npy\"\n",
     "    tt_gap, sel_gap = get_lc(fname)\n",
     "\n",
     "    fig_lc_src = plt.figure(\"Light curve\",figsize=(12, 8), clear=True)\n",
