--- a/vasca/examples/inspect_sed.ipynb
+++ b/vasca/examples/inspect_sed.ipynb
@@ -7,12 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "region_name = \"CAINGSGII_10-800\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" # \"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
+    "region_name = \"ALL_10-800\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" # \"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
     "\n",
     "srcs_ids = []\n",
-    "srcs_ids = [1891 ,3403 ,16149 ,45461 ,] # WDs TDS\n",
-    "srcs_ids = [4546 ,12718 ,69253 ,228174 ,229551 ,] # WD \"CAINGSGII_10-800\" "
+    "srcs_ids = [55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,226975 ,267514 ,588567 ,599887 ,]"
    ]
   },
   {
@@ -24,28 +23,42 @@
     {
      "data": {
       "text/html": [
-       "<div><i>Table length=5</i>\n",
-       "<table id=\"table140707715852432\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<div><i>Table length=12</i>\n",
+       "<table id=\"table140653033865424\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_xv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>coadd_src_id</th><th>coadd_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>coadd_ffactor</th><th>coadd_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>hr</th><th>hr_err</th><th>otype</th><th>main_id</th><th>otypes</th><th>z_value</th><th>distance_distance</th><th>distance_unit</th><th>distance_result</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec2</th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>int64</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>float64</th><th>float64</th><th>bytes4</th><th>float32</th></tr></thead>\n",
-       "<tr><td>-1</td><td>14 .. 4</td><td>348.9035760296506</td><td>19.413752921024184</td><td>0.12961677</td><td>-0.16667423</td><td>0.1757124</td><td>0.9601939</td><td>0.38698718</td><td>10620</td><td>0.27343646</td><td>1 .. 2</td><td>True</td><td>127.17282 .. 38.594795</td><td>0.6384927 .. 1.9439608</td><td>0.001805932 .. 0.0030419864</td><td>36.337494 .. 59.990253</td><td>1.3913088e-13 .. 0.45650917</td><td>6.923858 .. 0.86853236</td><td>1.0022669 .. 1.0705501</td><td>0.35844114 .. 1.2124159</td><td>-1</td><td>4546</td><td>2</td><td>0.31256443</td><td>0.016097367</td><td>WD?</td><td>SDSS J231536.88+192448.9</td><td>blu|Pu*|*|Opt|WD?|WD?</td><td>--</td><td>168.9270</td><td>pc</td><td>0.4557</td></tr>\n",
-       "<tr><td>-1</td><td>18 .. 6</td><td>303.01100514369136</td><td>-48.39410878608832</td><td>0.11078485</td><td>-0.1118269</td><td>0.21495172</td><td>0.59480566</td><td>0.64826185</td><td>34860</td><td>0.16462971</td><td>1 .. 2</td><td>True</td><td>145.71658 .. 53.2544</td><td>0.650513 .. 1.6317714</td><td>0.011681381 .. 0.09355947</td><td>262.29507 .. 336.1793</td><td>0.0 .. 4.538933e-19</td><td>41.076607 .. 19.113188</td><td>0.9875045 .. 0.926408</td><td>-2.2628376 .. -1.7328564</td><td>-1</td><td>12718</td><td>2</td><td>0.38933843</td><td>0.012308751</td><td>WD?</td><td>Gaia DR3 6669015352243852800</td><td>*|WD?</td><td>--</td><td>--</td><td>--</td><td>0.3998</td></tr>\n",
-       "<tr><td>-1</td><td>14 .. -1</td><td>357.1212025536532</td><td>-9.416754993209635</td><td>0.16907042</td><td>-0.2680231</td><td>0.1342233</td><td>0.9720384</td><td>0.33244652</td><td>233862</td><td>0.027343804</td><td>1 .. 0</td><td>True</td><td>16.348427 .. -1.0</td><td>0.22906503 .. -1.0</td><td>0.01764733 .. -100.0</td><td>5.4612293 .. -1.0</td><td>1.6703516e-17 .. -1.0</td><td>8.480622 .. -1.0</td><td>0.9799343 .. 1.0</td><td>-1.0902563 .. 0.0</td><td>-1</td><td>69253</td><td>1</td><td>-1.0</td><td>-1.0</td><td>WD*</td><td>GALEX J234829.1-092500</td><td>WD*|**|WD*|WD*|EB*|WD*|*|Opt|UV</td><td>-0.0000600</td><td>507.2900</td><td>pc</td><td>0.6189</td></tr>\n",
-       "<tr><td>-1</td><td>15 .. -1</td><td>210.0014163678415</td><td>3.214435606873498</td><td>0.13007838</td><td>0.042491015</td><td>0.29654562</td><td>0.042537145</td><td>1.1792775</td><td>669224</td><td>0.29846194</td><td>1 .. 0</td><td>True</td><td>146.37999 .. -1.0</td><td>0.755886 .. -1.0</td><td>0.0032252688 .. -100.0</td><td>84.25255 .. -1.0</td><td>1.9072077e-12 .. -1.0</td><td>6.1626086 .. -1.0</td><td>0.9977022 .. 1.0</td><td>-0.35384166 .. 0.0</td><td>-1</td><td>228174</td><td>1</td><td>-1.0</td><td>-1.0</td><td>WD*</td><td>GALEX J140000.3+031251</td><td>WD*|WD*|WD*|WD*|WD*|WD*|*|Opt|UV</td><td>0.0000630</td><td>313.7650</td><td>pc</td><td>0.1945</td></tr>\n",
-       "<tr><td>-1</td><td>15 .. -1</td><td>207.03531485024092</td><td>-30.479189687581158</td><td>0.13244738</td><td>-0.1224625</td><td>0.14153127</td><td>0.81857866</td><td>0.54091847</td><td>673280</td><td>0.088201396</td><td>1 .. 0</td><td>True</td><td>144.80978 .. -1.0</td><td>0.74000114 .. -1.0</td><td>0.0036297438 .. -100.0</td><td>87.94179 .. -1.0</td><td>1.1032699e-20 .. -1.0</td><td>9.209586 .. -1.0</td><td>0.99899095 .. 1.0</td><td>-0.1557424 .. 0.0</td><td>-1</td><td>229551</td><td>1</td><td>-1.0</td><td>-1.0</td><td>WD?</td><td>Gaia DR3 6175066552397551616</td><td>*|WD?</td><td>--</td><td>--</td><td>--</td><td>0.1621</td></tr>\n",
+       "<tr><td>-1</td><td>14 .. 4</td><td>348.90357602965054</td><td>19.41375292102418</td><td>0.12961677</td><td>-0.16667423</td><td>0.1757124</td><td>0.9601939</td><td>0.38698718</td><td>178527</td><td>0.27343646</td><td>1 .. 2</td><td>True</td><td>127.17284 .. 38.594788</td><td>0.6384927 .. 1.9439608</td><td>0.0018059316 .. 0.0030419875</td><td>36.337494 .. 59.990253</td><td>1.3913134e-13 .. 0.45650917</td><td>6.9238577 .. 0.86853236</td><td>1.002267 .. 1.0705498</td><td>0.35846016 .. 1.2124124</td><td>-1</td><td>55034</td><td>2</td><td>0.31256443</td><td>0.016097367</td><td>WD?</td><td>SDSS J231536.88+192448.9</td><td>blu|Pu*|*|Opt|WD?|WD?</td><td>--</td><td>168.9270</td><td>pc</td><td>0.4557</td></tr>\n",
+       "<tr><td>-1</td><td>7 .. 2</td><td>334.6190008630954</td><td>-0.00334150877900888</td><td>0.18584667</td><td>-0.18340522</td><td>0.12893102</td><td>0.8110655</td><td>0.40349314</td><td>198217</td><td>0.26084808</td><td>1 .. 2</td><td>True</td><td>121.26046 .. 42.269413</td><td>0.7279036 .. 0.8880146</td><td>0.0016064999 .. 0.005644754</td><td>27.450546 .. 11.66761</td><td>2.65163e-07 .. 0.00661471</td><td>6.8656754 .. 7.3747196</td><td>0.9975268 .. 1.0487088</td><td>-0.38367364 .. 1.7196137</td><td>-1</td><td>61491</td><td>2</td><td>0.35823846</td><td>0.011588516</td><td>WD*</td><td>PB  5130</td><td>WD*|WD*|WD*|WD*|*|Opt|UV|WD?|WD?</td><td>1.3299500</td><td>121.7450</td><td>pc</td><td>0.3802</td></tr>\n",
+       "<tr><td>-1</td><td>32 .. 4</td><td>333.54135905569626</td><td>0.8794295342456827</td><td>0.106176615</td><td>-0.26969245</td><td>0.14336883</td><td>0.9997828</td><td>0.34498087</td><td>208406</td><td>0.11125645</td><td>1 .. 2</td><td>True</td><td>19.849901 .. 5.189896</td><td>0.17154492 .. 0.40037686</td><td>0.06351051 .. -0.020882767</td><td>26.03123 .. 0.08260181</td><td>0.0 .. 0.9400651</td><td>26.48837 .. 0.13361953</td><td>0.94128394 .. 1.0394988</td><td>-5.53346 .. 0.3762283</td><td>-1</td><td>64360</td><td>2</td><td>0.34424755</td><td>0.02826839</td><td>WD*</td><td>GALEX J221409.8+005245</td><td>WD*|WD*|WD*|*|Opt|UV</td><td>--</td><td>439.0000</td><td>pc</td><td>0.2767</td></tr>\n",
+       "<tr><td>-1</td><td>18 .. 6</td><td>303.01100514369136</td><td>-48.394108786088324</td><td>0.11078485</td><td>-0.1118269</td><td>0.21495172</td><td>0.59480566</td><td>0.64826185</td><td>236659</td><td>0.16462971</td><td>1 .. 2</td><td>True</td><td>145.71655 .. 53.254395</td><td>0.65051293 .. 1.6317714</td><td>0.011681384 .. 0.09355949</td><td>262.29507 .. 336.1793</td><td>0.0 .. 4.538933e-19</td><td>41.07661 .. 19.113188</td><td>0.9875043 .. 0.92640793</td><td>-2.2628753 .. -1.732858</td><td>-1</td><td>73354</td><td>2</td><td>0.38933843</td><td>0.012308751</td><td>WD?</td><td>Gaia DR3 6669015352243852800</td><td>*|WD?</td><td>--</td><td>--</td><td>--</td><td>0.3998</td></tr>\n",
+       "<tr><td>-1</td><td>25 .. 12</td><td>261.0003596219375</td><td>60.74772407491583</td><td>0.09249079</td><td>-0.12485813</td><td>0.21191294</td><td>0.78836334</td><td>0.5457976</td><td>245032</td><td>0.072778955</td><td>1 .. 2</td><td>True</td><td>43.02675 .. 51.450314</td><td>0.27040577 .. 0.68775964</td><td>0.021784516 .. 0.014586984</td><td>42.229954 .. 74.628174</td><td>0.0 .. 9.499622e-33</td><td>27.235014 .. 16.378187</td><td>0.9762591 .. 0.9339476</td><td>-2.9283037 .. -4.3375144</td><td>-1</td><td>76243</td><td>2</td><td>1.0981839</td><td>0.017458435</td><td>WD?</td><td>ZTF J172400.04+604451.8</td><td>EB*|*|WD?|WD?</td><td>--</td><td>--</td><td>--</td><td>0.2700</td></tr>\n",
+       "<tr><td>-1</td><td>15 .. -1</td><td>244.14364475974057</td><td>54.16992508668509</td><td>0.14302015</td><td>-0.149046</td><td>0.15964259</td><td>0.6340721</td><td>0.52604604</td><td>71751</td><td>0.20260328</td><td>1 .. 0</td><td>False</td><td>43.955715 .. -1.0</td><td>0.373552 .. -1.0</td><td>0.023890479 .. -100.0</td><td>48.38352 .. -1.0</td><td>0.0 .. -1.0</td><td>23.603268 .. -1.0</td><td>0.990053 .. -100.0</td><td>-1.0570939 .. -10000.0</td><td>-1</td><td>92867</td><td>2</td><td>-1.0</td><td>-1.0</td><td>WD?</td><td>GALEX J161634.4+541011</td><td>*|*|Opt|UV|WD?|WD?</td><td>--</td><td>93.6920</td><td>pc</td><td>1.0158</td></tr>\n",
+       "<tr><td>-1</td><td>21 .. 1</td><td>219.22854193199083</td><td>34.06670048559544</td><td>0.11800814</td><td>-0.10925614</td><td>0.2025599</td><td>0.68355554</td><td>0.61700284</td><td>351692</td><td>0.035019293</td><td>1 .. 2</td><td>True</td><td>30.282242 .. 37.433167</td><td>0.3364404 .. 3.059399</td><td>0.013331741 .. -100.0</td><td>19.445185 .. -100.0</td><td>4.734923e-28 .. -1.0</td><td>9.079622 .. -1.0</td><td>1.0011699 .. 0.9832684</td><td>0.090507984 .. -0.18113555</td><td>-1</td><td>104078</td><td>2</td><td>1.1301088</td><td>0.1134821</td><td>WD?</td><td>GALEX J143654.8+340400</td><td>*|UV|WD?|WD?</td><td>--</td><td>--</td><td>--</td><td>0.2658</td></tr>\n",
+       "<tr><td>-1</td><td>18 .. 8</td><td>218.05243811169709</td><td>35.840903328171464</td><td>0.12735511</td><td>-0.29414088</td><td>0.17379755</td><td>0.96632844</td><td>0.39901668</td><td>361741</td><td>0.07959464</td><td>1 .. 2</td><td>True</td><td>14.915235 .. 6.4086227</td><td>0.24988876 .. 0.38860035</td><td>0.04386847 .. 0.04654254</td><td>12.461055 .. 3.405273</td><td>3.1348733e-25 .. 0.030883376</td><td>9.390375 .. 2.204061</td><td>0.95756274 .. 0.97631735</td><td>-2.0785728 .. -0.309062</td><td>-1</td><td>106745</td><td>2</td><td>0.32614058</td><td>0.026615512</td><td>WD?</td><td>Gaia DR2 1480420251349953920</td><td>*|WD?</td><td>--</td><td>--</td><td>--</td><td>0.2143</td></tr>\n",
+       "<tr><td>-1</td><td>8 .. 2</td><td>17.90849637066491</td><td>-46.12418089066694</td><td>0.16791977</td><td>0.17754589</td><td>0.47294554</td><td>0.04757083</td><td>1.22303</td><td>807965</td><td>0.16838291</td><td>1 .. 2</td><td>False</td><td>211.67215 .. 51.06775</td><td>0.9692165 .. 4.06685</td><td>0.002947837 .. -0.01447288</td><td>140.74606 .. 0.8718241</td><td>4.914994e-20 .. 0.8805627</td><td>15.212214 .. 0.022576839</td><td>0.98922604 .. 0.8520654</td><td>-1.915892 .. -2.1245766</td><td>-1</td><td>226975</td><td>2</td><td>0.25029808</td><td>0.024380246</td><td>WD?</td><td>GALEX J011138.0-460727</td><td>PM*|*|UV|WD?|WD?|WD?|WD?|WD?</td><td>--</td><td>152.5620</td><td>pc</td><td>1.2872</td></tr>\n",
+       "<tr><td>-1</td><td>14 .. -1</td><td>357.12120255365335</td><td>-9.416754993209638</td><td>0.16907042</td><td>-0.2680231</td><td>0.1342233</td><td>0.9720384</td><td>0.33244652</td><td>940726</td><td>0.027343804</td><td>1 .. 0</td><td>True</td><td>16.348427 .. -1.0</td><td>0.22906503 .. -1.0</td><td>0.01764733 .. -100.0</td><td>5.4612293 .. -1.0</td><td>1.6703516e-17 .. -1.0</td><td>8.480622 .. -1.0</td><td>0.9799343 .. 1.0</td><td>-1.0902563 .. 0.0</td><td>-1</td><td>267514</td><td>1</td><td>-1.0</td><td>-1.0</td><td>WD*</td><td>GALEX J234829.1-092500</td><td>WD*|**|WD*|WD*|EB*|WD*|*|Opt|UV</td><td>-0.0000600</td><td>507.2900</td><td>pc</td><td>0.6189</td></tr>\n",
+       "<tr><td>-1</td><td>15 .. -1</td><td>210.00141636784147</td><td>3.2144356068734976</td><td>0.13007838</td><td>0.042491015</td><td>0.29654562</td><td>0.042537145</td><td>1.1792775</td><td>2010948</td><td>0.29846194</td><td>1 .. 0</td><td>True</td><td>146.37997 .. -1.0</td><td>0.75588596 .. -1.0</td><td>0.003225269 .. -100.0</td><td>84.25254 .. -1.0</td><td>1.9072014e-12 .. -1.0</td><td>6.162609 .. -1.0</td><td>0.99770206 .. 1.0</td><td>-0.3538577 .. 0.0</td><td>-1</td><td>588567</td><td>1</td><td>-1.0</td><td>-1.0</td><td>WD*</td><td>GALEX J140000.3+031251</td><td>WD*|WD*|WD*|WD*|WD*|WD*|*|Opt|UV</td><td>0.0000630</td><td>313.7650</td><td>pc</td><td>0.1945</td></tr>\n",
+       "<tr><td>-1</td><td>15 .. -1</td><td>207.03531485024092</td><td>-30.479189687581158</td><td>0.13244738</td><td>-0.1224625</td><td>0.14153127</td><td>0.81857866</td><td>0.54091847</td><td>2048910</td><td>0.088201396</td><td>1 .. 0</td><td>True</td><td>144.80977 .. -1.0</td><td>0.74000114 .. -1.0</td><td>0.0036297448 .. -100.0</td><td>87.941795 .. -1.0</td><td>1.1032776e-20 .. -1.0</td><td>9.209585 .. -1.0</td><td>0.99899083 .. 1.0</td><td>-0.15575865 .. 0.0</td><td>-1</td><td>599887</td><td>1</td><td>-1.0</td><td>-1.0</td><td>WD?</td><td>Gaia DR3 6175066552397551616</td><td>*|WD?</td><td>--</td><td>--</td><td>--</td><td>0.1621</td></tr>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "<Table length=5>\n",
+       "<Table length=12>\n",
        "fd_src_id  nr_det          ra         ... distance_unit distance_result\n",
        "                          deg         ...                    arcsec    \n",
        "  int32   int32[2]      float64       ...     bytes4        float32    \n",
        "--------- -------- ------------------ ... ------------- ---------------\n",
-       "       -1  14 .. 4  348.9035760296506 ...            pc          0.4557\n",
+       "       -1  14 .. 4 348.90357602965054 ...            pc          0.4557\n",
+       "       -1   7 .. 2  334.6190008630954 ...            pc          0.3802\n",
+       "       -1  32 .. 4 333.54135905569626 ...            pc          0.2767\n",
        "       -1  18 .. 6 303.01100514369136 ...            --          0.3998\n",
-       "       -1 14 .. -1  357.1212025536532 ...            pc          0.6189\n",
-       "       -1 15 .. -1  210.0014163678415 ...            pc          0.1945\n",
+       "       -1 25 .. 12  261.0003596219375 ...            --          0.2700\n",
+       "       -1 15 .. -1 244.14364475974057 ...            pc          1.0158\n",
+       "       -1  21 .. 1 219.22854193199083 ...            --          0.2658\n",
+       "       -1  18 .. 8 218.05243811169709 ...            --          0.2143\n",
+       "       -1   8 .. 2  17.90849637066491 ...            pc          1.2872\n",
+       "       -1 14 .. -1 357.12120255365335 ...            pc          0.6189\n",
+       "       -1 15 .. -1 210.00141636784147 ...            pc          0.1945\n",
        "       -1 15 .. -1 207.03531485024092 ...            --          0.1621"
       ]
      },
@@ -101,12 +114,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f8de1f17e894f719522636f80f3eabb",
+       "model_id": "995fd78b1bff4f70ab20b6e25f9216dc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(4546, 12718, 69253, 228174, 229551), value=45…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(55034, 61491, 64360, 73354, 76243, 92867, 104…"
       ]
      },
      "execution_count": 3,
