Added VizieR SED
Former-commit-id: c726a4d9afb48344c37717728f695507f5413bb3

--- a/vasca/examples/inspect_sed.ipynb
+++ b/vasca/examples/inspect_sed.ipynb
@@ -24,7 +24,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=12</i>\n",
-       "<table id=\"table140653033865424\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139818419210080\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_xv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>coadd_src_id</th><th>coadd_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>coadd_ffactor</th><th>coadd_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>hr</th><th>hr_err</th><th>otype</th><th>main_id</th><th>otypes</th><th>z_value</th><th>distance_distance</th><th>distance_unit</th><th>distance_result</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec2</th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>int64</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>float64</th><th>float64</th><th>bytes4</th><th>float32</th></tr></thead>\n",
@@ -87,7 +87,7 @@
     "from vasca.field import BaseField\n",
     "import vasca.visualization as vvis\n",
     "from vasca.tables import TableCollection, dd_vasca_columns\n",
-    "from vasca.utils import otype2ogroup,dd_ogrp2otypes, dd_ogrp2col, dd_filter2lambda, mag2flux, flux2mag\n",
+    "from vasca.utils import otype2ogroup,dd_ogrp2otypes, dd_ogrp2col, dd_filter2lambda, mag2flux, flux2mag, query_vizier_sed\n",
     "\n",
     "rg = Region()\n",
     "rg.load_from_fits(region_fname)\n",
@@ -114,7 +114,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "995fd78b1bff4f70ab20b6e25f9216dc",
+       "model_id": "faf5bbc1d5de4b7e831ba94a20e86ed0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,8 +128,8 @@
     }
    ],
    "source": [
-    "sdss_ftr     = [\"u\" , \"g\" , \"r\"  ,\"i\" , \"z\"]\n",
-    "sdss_wav  = [3546*uu.AA, 4670*uu.AA, 6156*uu.AA ,7472*uu.AA, 8917*uu.AA]\n",
+    "#sdss_ftr     = [\"u\" , \"g\" , \"r\"  ,\"i\" , \"z\"]\n",
+    "#sdss_wav  = [3546*uu.AA, 4670*uu.AA, 6156*uu.AA ,7472*uu.AA, 8917*uu.AA]\n",
     "\n",
     "\n",
     "#xid = SDSS.query_region(pos, radius='5 arcsec', spectro=False)\n",
@@ -149,26 +149,20 @@
     "    # get SED pints (for noa assume sdss)\n",
     "    tc_src = rg.get_src_from_id(rg_src_id)\n",
     "    pos = SkyCoord(tc_src.tt_simbad[\"ra\"].quantity,tc_src.tt_simbad[\"dec\"].quantity,frame='icrs')\n",
-    "    tt_sdss = SDSS.query_crossid(pos, radius=0.5*uu.arcsec)\n",
     "    \n",
-    "    ll_flux = []\n",
-    "    ll_flux_err = []\n",
-    "    for flt in sdss_ftr :\n",
-    "        flux,flux_err = mag2flux(tt_sdss[\"psfMag_\"+flt],tt_sdss[\"psfMagerr_\"+flt])\n",
-    "        ll_flux.append(flux[0])\n",
-    "        ll_flux_err.append(flux_err[0])\n",
+    "    tt_vizier = query_vizier_sed(tc_src.tt_simbad[\"ra\"][0],tc_src.tt_simbad[\"dec\"][0])\n",
+    "    tt_vizier[\"wav\"] = (cc.c/tt_vizier[\"sed_freq\"]).to(uu.AA)\n",
     "\n",
-    "    tt_sed = Table()\n",
-    "    tt_sed[\"flux\"] = ll_flux\n",
-    "    tt_sed[\"flux_err\"] = ll_flux_err\n",
-    "    tt_sed[\"wav\"] = sdss_wav\n",
-    "\n",
+    "    \n",
+    "    # Create vasca SED table*uu.Jy\n",
+    "    tt_vasca = Table()\n",
+    "    tt_vasca[\"flux\"] = []*uu.Unit(\"1e-6 Jy\")\n",
+    "    tt_vasca[\"flux_err\"] = []*uu.Unit(\"1e-6 Jy\")\n",
+    "    tt_vasca[\"wav\"] = []*uu.AA\n",
     "    flts = [\"NUV\",\"FUV\"]\n",
     "    for ii in range(len(flts)):\n",
     "        if tc_src.tt_sources[\"flux\"].quantity[:,ii][0]>0:\n",
-    "            tt_sed.add_row([tc_src.tt_sources[\"flux\"].quantity[:,ii][0],tc_src.tt_sources[\"flux_err\"].quantity[:,ii][0],dd_filter2lambda[flts[ii]]])\n",
-    "    tt_sed.sort(\"wav\")\n",
-    "    #display(tt_sed)\n",
+    "            tt_vasca.add_row([tc_src.tt_sources[\"flux\"].quantity[:,ii][0],tc_src.tt_sources[\"flux_err\"].quantity[:,ii][0],dd_filter2lambda[flts[ii]]])\n",
     "\n",
     "    #Get spectrum\n",
     "    #sdss_id = tt_sdss[\"objID\"] [0]\n",
@@ -192,7 +186,8 @@
     "        fig_src = plt.figure(\"SED\",figsize=(8, 7), clear=True)\n",
     "        plt.xscale('log')\n",
     "        plt.yscale('log')\n",
-    "        plt.errorbar(tt_sed[\"wav\"].quantity,tt_sed[\"flux\"].quantity,yerr= tt_sed[\"flux_err\"].quantity , fmt=\"o\")\n",
+    "        plt.errorbar(tt_vasca[\"wav\"].quantity,tt_vasca[\"flux\"].quantity,yerr= tt_vasca[\"flux_err\"].quantity , fmt=\"o\")\n",
+    "        plt.errorbar(tt_vizier[\"wav\"].quantity,tt_vizier[\"sed_flux\"].quantity,yerr= tt_vizier[\"sed_eflux\"].quantity , fmt=\"o\")\n",
     "        if type(tt_xid) != type(None):\n",
     "            plt.plot(spec_lam[sel],sed_flux[sel])\n",
     "    \n",
@@ -216,7 +211,8 @@
     "    plt.show()\n",
     "\n",
     "    display(tc_src.tt_simbad)\n",
-    "    display(tt_sdss)\n",
+    "    display(tt_vizier)\n",
+    "    display(tt_vasca)\n",
     "\n",
     "#bb = BlackBody(temperature=26000*uu.K, scale=2.7e-25)\n",
     "#bb_lambda = np.power(10,np.arange(3, 4.2,0.01)) * uu.AA\n",
