--- a/vasca/examples/inspect_sed.ipynb
+++ b/vasca/examples/inspect_sed.ipynb
@@ -11,7 +11,7 @@
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
     "\n",
     "srcs_ids = []\n",
-    "srcs_ids = [55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,226975 ,267514 ,588567 ,599887 ,]"
+    "srcs_ids = [55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,226975 ,267514 ,588567 ,599887 ,]  # WDs ALL"
    ]
   },
   {
@@ -24,7 +24,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=12</i>\n",
-       "<table id=\"table139818419210080\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140484181344560\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_xv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>coadd_src_id</th><th>coadd_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>coadd_ffactor</th><th>coadd_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>hr</th><th>hr_err</th><th>otype</th><th>main_id</th><th>otypes</th><th>z_value</th><th>distance_distance</th><th>distance_unit</th><th>distance_result</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec2</th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>int64</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>float64</th><th>float64</th><th>bytes4</th><th>float32</th></tr></thead>\n",
@@ -114,7 +114,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "faf5bbc1d5de4b7e831ba94a20e86ed0",
+       "model_id": "e04f3b28f2c54391aa34bd7a99fe746c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,8 +186,8 @@
     "        fig_src = plt.figure(\"SED\",figsize=(8, 7), clear=True)\n",
     "        plt.xscale('log')\n",
     "        plt.yscale('log')\n",
-    "        plt.errorbar(tt_vasca[\"wav\"].quantity,tt_vasca[\"flux\"].quantity,yerr= tt_vasca[\"flux_err\"].quantity , fmt=\"o\")\n",
     "        plt.errorbar(tt_vizier[\"wav\"].quantity,tt_vizier[\"sed_flux\"].quantity,yerr= tt_vizier[\"sed_eflux\"].quantity , fmt=\"o\")\n",
+    "        plt.errorbar(tt_vasca[\"wav\"].quantity,tt_vasca[\"flux\"].quantity,yerr= tt_vasca[\"flux_err\"].quantity , fmt=\"o\")\n",
     "        if type(tt_xid) != type(None):\n",
     "            plt.plot(spec_lam[sel],sed_flux[sel])\n",
     "    \n",
@@ -209,6 +209,7 @@
     "    plt.cla()\n",
     "    vvis.plot_light_curve(rg, rg_src_ids = rg_src_id,fig=fig_lc_src) #\n",
     "    plt.show()\n",
+    "    #lt.savefig(tc_src.tt_simbad[\"main_id\"][0]+\".png\")\n",
     "\n",
     "    display(tc_src.tt_simbad)\n",
     "    display(tt_vizier)\n",
