--- a/vasca/examples/inspect_sed.ipynb
+++ b/vasca/examples/inspect_sed.ipynb
@@ -24,7 +24,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=12</i>\n",
-       "<table id=\"table140484181344560\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140037421058320\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_xv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>coadd_src_id</th><th>coadd_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>coadd_ffactor</th><th>coadd_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>hr</th><th>hr_err</th><th>otype</th><th>main_id</th><th>otypes</th><th>z_value</th><th>distance_distance</th><th>distance_unit</th><th>distance_result</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec2</th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>int64</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>float64</th><th>float64</th><th>bytes4</th><th>float32</th></tr></thead>\n",
@@ -87,7 +87,7 @@
     "from vasca.field import BaseField\n",
     "import vasca.visualization as vvis\n",
     "from vasca.tables import TableCollection, dd_vasca_columns\n",
-    "from vasca.utils import otype2ogroup,dd_ogrp2otypes, dd_ogrp2col, dd_filter2lambda, mag2flux, flux2mag, query_vizier_sed\n",
+    "from vasca.utils import otype2ogroup,dd_ogrp2otypes, dd_ogrp2col, dd_filter2wavelength, mag2flux, flux2mag, query_vizier_sed\n",
     "\n",
     "rg = Region()\n",
     "rg.load_from_fits(region_fname)\n",
@@ -114,7 +114,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e04f3b28f2c54391aa34bd7a99fe746c",
+       "model_id": "b95a4ab7e6374d10aac6ccfa704c629d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +152,6 @@
     "    \n",
     "    tt_vizier = query_vizier_sed(tc_src.tt_simbad[\"ra\"][0],tc_src.tt_simbad[\"dec\"][0])\n",
     "    tt_vizier[\"wav\"] = (cc.c/tt_vizier[\"sed_freq\"]).to(uu.AA)\n",
-    "\n",
     "    \n",
     "    # Create vasca SED table*uu.Jy\n",
     "    tt_vasca = Table()\n",
@@ -162,7 +161,7 @@
     "    flts = [\"NUV\",\"FUV\"]\n",
     "    for ii in range(len(flts)):\n",
     "        if tc_src.tt_sources[\"flux\"].quantity[:,ii][0]>0:\n",
-    "            tt_vasca.add_row([tc_src.tt_sources[\"flux\"].quantity[:,ii][0],tc_src.tt_sources[\"flux_err\"].quantity[:,ii][0],dd_filter2lambda[flts[ii]]])\n",
+    "            tt_vasca.add_row([tc_src.tt_sources[\"flux\"].quantity[:,ii][0],tc_src.tt_sources[\"flux_err\"].quantity[:,ii][0],dd_filter2wavelength[flts[ii]]])\n",
     "\n",
     "    #Get spectrum\n",
     "    #sdss_id = tt_sdss[\"objID\"] [0]\n",
@@ -212,7 +211,8 @@
     "    #lt.savefig(tc_src.tt_simbad[\"main_id\"][0]+\".png\")\n",
     "\n",
     "    display(tc_src.tt_simbad)\n",
-    "    display(tt_vizier)\n",
+    "    #display(tt_vizier)\n",
+    "    tt_vizier.pprint_all()\n",
     "    display(tt_vasca)\n",
     "\n",
     "#bb = BlackBody(temperature=26000*uu.K, scale=2.7e-25)\n",
