Added VASCA to tt_sed
Former-commit-id: a12e118ac7d7a06f8a00bea311f084d3f8421828

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "region_name = \"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
+    "region_name = \"ALL_10-800\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
     "sort_par = \"rg_src_id\" # \"flux\"\n",
     "redo_src_sel = False\n",
@@ -35,6 +35,7 @@
     "\n",
     "srcs_ids = []\n",
     "srcs_ids = [1891 ,3403 ,16149 ,45461 ,] # WDs TDS\n",
+    "srcs_ids = [55034 ,61491 ,64360 ,73354 ,76243 ,92867 ,104078 ,106745 ,226975 ,267514 ,588567 ,599887 ,]  # WDs ALL\n",
     "#srcs_ids = []\n",
     "#srcs_ids = [4546 ,12718 ,69253 ,228174 ,229551 ,] #WD \"CAINGSGII_10-800\""
    ]
@@ -49,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr sources: 1230 selected: 871\n"
+      "Nr sources: 7117 selected: 4318\n"
      ]
     }
    ],
@@ -120,12 +121,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1611b67d13e643ca9804aa0a1bd0c878",
+       "model_id": "7f439e43d9994f649a6ab9c9c1812a8c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(1891, 3403, 16149, 45461), value=1891), Outpu…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(55034, 61491, 64360, 73354, 76243, 92867, 104…"
       ]
      },
      "execution_count": 3,
@@ -167,12 +168,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41169d72ca0f4636badde8ff1d7bd2da",
+       "model_id": "5808078138824f96921d96966dcbabbb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='block_nr', max=0), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=1, description='block_nr', max=2), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 4,
